processed/gerrit/txt/53263.txt
Change:     53263
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53263
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     b2_12
Status:     MERGED
Owner:      Jian Yu
Created:    2023-11-28 06:54:30.000000000
Updated:    2024-02-27 05:40:28.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)
Topic:      LTS12

--- Labels ---
  Code-Review: Shaun Tancheff: +1; Andreas Dilger: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Lustre-change: https://review.whamcloud.com/49043
Lustre-commit: d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53263
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2023-11-28 06:54:30.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2023-11-28 06:55:25.000000000) ---
Patch Set 1:

Builds for x86_64 centos7 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/37835/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests@zfs

--- Message (wc-checkpatch, 2023-11-28 06:58:30.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-11-28 07:14:48.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100538/ : SUCCESS

--- Message (Shaun Tancheff, 2023-11-28 07:44:02.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Autotest, 2023-11-29 00:56:09.000000000) ---
Patch Set 1:

Trevis Autotest 2 retesting enforced review-dne-zfs-part-1 session on el7.9-x86_64/zfs servers and clients for build 100538 patch 1. Requested by jianyu because of LU-12207.

--- Message (Andreas Dilger, 2024-02-21 01:18:02.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2024-02-21 01:40:44.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Andreas Dilger, 2024-02-21 01:40:49.000000000) ---
Topic set to LTS12

--- Message (Oleg Drokin, 2024-02-27 05:40:28.000000000) ---
Change has been successfully cherry-picked as eefca0a2a1e4e840ced50c0a458d2c697c5c606a by Oleg Drokin
